--- a/Basics.ipynb
+++ b/Basics.ipynb
@@ -666,6 +666,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Both represent Yes/No questions. They can also be NaN where a respondent chooses not to answer a question. I can use the pandas.Series.value_counts() method on a series to see all of the unique values in a column, along with the total number of times each value appears.\n",
+    "\n",
+    "Both columns are currently string types, because the main values they contain are Yes and No. I can make the data a bit easier to analyze down the road by converting each column to a Boolean having only the values True, False, and NaN. Booleans are easier to work with because we can select the rows that are True or False without having to do a string comparison.\n",
+    "\n",
+    "I can use the pandas.Series.map() method on series objects to perform the conversion."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {
@@ -711,6 +722,17 @@
    "metadata": {},
    "source": [
     "# Cleaning and Mapping Checkbox coulumns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next six columns represent a single checkbox question. The respondent checked off a series of boxes in response to the question, Which of the following Star Wars films have you seen? Please select all that apply.\n",
+    "\n",
+    "If the value is NaN, the respondent either didn't answer or didn't see the movie. I'll assume that they didn't see the movie.\n",
+    "\n",
+    "I'll need to convert each of these columns to a Boolean, then rename the column something more intuitive. Ie can convert the values the same way we did earlier, except that I'll need to include the movie title and NaN in the mapping dictionary."
    ]
   },
   {
@@ -1020,6 +1042,17 @@
    "metadata": {},
    "source": [
     "# Cleaning the Ranking Columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next six columns ask the respondent to rank the Star Wars movies in order of least favorite to most favorite. 1 means the film was the most favorite, and 6 means it was the least favorite. Each of the following columns can contain the value 1, 2, 3, 4, 5, 6, or NaN.\n",
+    "\n",
+    "Fortunately, these columns don't require a lot of cleanup. I'll need to convert each column to a numeric type, though, then rename the columns so that we can tell what they represent more easily.\n",
+    "\n",
+    "I can do the numeric conversion with the pandas.DataFrame.astype() method on dataframes."
    ]
   },
   {
